= Changelog

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project adheres to 
http://semver.org/spec/v2.0.0.html[Semantic Versioning].


== 8.5.0 - TBD

=== Added

- Added `DigitalObject.getSize()`



== 8.4.0 - 2017-09-26

=== Added

- Added `YamlSequence.sort()`



== 8.3.3 - 2017-09-25

=== Fixed

- Minor fixes in normalization of YAML configuration



== 8.3.2 - 2017-09-25

=== Fixed

- Minor fixes in normalization of YAML configuration



== 8.3.1 - 2017-09-25

=== Fixed

- Minor fixes in normalization of YAML configuration



== 8.3.0 - 2017-09-25

=== Added

- Added `BatchSipAssemblerWithCallback`


=== Fixed

- Minor fixes in normalization of YAML configuration



== 8.2.0 - 2017-09-22

=== Added

- Added `ObjectConfiguration` with a third option ("create, but do not update") for the `configure` property.



== 8.1.0 - 2017-09-20

=== Added

- Added entries filter to `YamlMap.sort()` to exclude entries from being sorted.



== 8.0.0 - 2017-09-20

=== Changed

- `YamlMap.sort(boolean)` performs a non-recursive sort when given `false`. This is the exact opposite of the 
  previous behavior of sorting everything but the top level. This new approach allows complete control over sorting
  (using a visitor), where some objects can be sorted and others left alone, or different objects can be sorted with
  different comparators.



== 7.4.7 - 2017-09-18

=== Fixed

- Minor fixes in normalization of YAML configuration



== 7.4.6 - 2017-09-15

=== Fixed

- Minor fixes in normalization of YAML configuration



== 7.4.5 - 2017-09-14

=== Fixed

- Fix handling of line separator



== 7.4.4 - 2017-09-14

=== Fixed

- Minor fixes in normalization of YAML configuration



== 7.4.3 - 2017-09-13

=== Fixed

- Minor fixes in normalization of YAML configuration



== 7.4.2 - 2017-09-13

=== Fixed

- Minor fixes in normalization of YAML configuration


